Fixed mobile header spacing and footer font color as per feedback

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -229,7 +229,7 @@ header a:hover {
 @media only screen and (max-width: 760px) {
   .desktop {
     display: none;
-  }x
+  }
 
   #mobile-header-page {
     display: -webkit-box;
@@ -768,7 +768,7 @@ footer {
   padding-bottom: 16px;
   padding-bottom: 1rem;
   /* height: 3rem; */
-  color: var(--light-txt-color, white);
+  color: var(--dark-txt-color, black);
   background-color: var(--bg-color2);
 }
 
@@ -783,7 +783,7 @@ footer nav {
 }
 
 footer a {
-  color: var(--light-txt-color, white);
+  color: var(--dark-txt-color, black);
   margin-left: 16px;
   margin-left: 1rem;
 }
